<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/qrCode_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_qrCode"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_scan_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scan_bind_tip"
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_uploaded_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploaded_list" />

        <Button
            android:id="@+id/btn_downloaded_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloaded_list"/>

        <Button
            android:id="@+id/btn_capacity"
            android:text="@string/cloud_storage_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_device" />


    </LinearLayout>

</FrameLayout>